# project-version-incrementer

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  pre-commit.sh  project-version-incrementer.vcxproj.filters
project-version-incrementer/: project-version-incrementer.sln
project-version-incrementer/project-version-incrementer/: ConfigurationHandler.cpp  ConfigurationHandler.h  LinuxProcessController.cpp  PviException.cpp  PviException.h  project-version-incrementer.vcxproj
scripts/: pvi.cpp
src/: CMakeLists.txt  ConfigurationHandler.cpp  ConfigurationHandler.h  IProcessController.h  LinuxProcessController.h  WindowsProcessController.cpp  WindowsProcessController.h  main.cpp
